// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`variants variants style 1`] = `
Array [
  <View
    style={
      Array [
        Object {
          "height": 100,
          "width": 100,
        },
      ]
    }
  />,
  <View
    style={
      Array [
        Object {
          "height": 300,
          "width": 300,
        },
      ]
    }
  />,
]
`;

exports[`variants variants w/ composition style 1`] = `
<View
  style={
    Array [
      Object {
        "height": 100,
        "width": 100,
      },
      Object {
        "margin": 8,
        "padding": 16,
      },
      Object {
        "backgroundColor": "blue",
      },
    ]
  }
/>
`;

exports[`variants variants w/ composition style 2`] = `
<View
  style={
    Array [
      Object {
        "height": 200,
        "width": 200,
      },
      Object {
        "margin": 8,
        "padding": 16,
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
/>
`;
